--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.7.2/redux.min.js"></script>
     <title>React Redux</title>
   </head>
   <body>
@@ -26,69 +27,6 @@
           Math.random().toString(36).substring(2) +
           new Date().getTime().toString(36)
         );
-      }
-
-      // Library
-      function createStore(reducer) {
-        let state;
-        let listeners = [];
-        const getState = () => state;
-
-        const subscribe = (listener) => {
-          listeners.push(listener);
-          return () => {
-            listeners = listeners.filter((l) => l !== listener);
-          };
-        };
-
-        const dispatch = (action) => {
-          state = reducer(state, action);
-          listeners.forEach((listener) => listener());
-        };
-
-        return {
-          getState,
-          subscribe,
-          dispatch,
-        };
-      }
-      const ADD_TODO = "ADD_TODO";
-      const REMOVE_TODO = "REMOVE_TODO";
-      const TOGGLE_TODO = "TOGGLE_TODO";
-      const ADD_GOAL = "ADD_GOAL";
-      const REMOVE_GOAL = "REMOVE_GOAL";
-
-      // Action creatore
-      function addTodoAction(todo) {
-        return {
-          type: ADD_TODO,
-          todo,
-        };
-      }
-
-      function removeTodoAction(id) {
-        return {
-          type: REMOVE_TODO,
-          id,
-        };
-      }
-      function toggleTodoAction(id) {
-        return {
-          type: TOGGLE_TODO,
-          id,
-        };
-      }
-      function addGoalAction(goal) {
-        return {
-          type: ADD_GOAL,
-          goal,
-        };
-      }
-      function removeGoalAction(id) {
-        return {
-          type: REMOVE_GOAL,
-          id,
-        };
       }
 
       //App Code
